--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                             <a href="https://twitter.com/rohitdilip8" target="_blank" title="Twitter" class="twitter">
                                 <i class="fa-brands fa-twitter"></i>
                             </a>
-                            <a href="https://scholar.google.com/citations?user=youruserid" target="_blank" title="Google Scholar" class="google-scholar">
+                            <a href="https://scholar.google.com/citations?user=c7UrOc4AAAAJ" target="_blank" title="Google Scholar" class="google-scholar">
                                 <i class="fa-solid fa-book"></i>
                             </a>
                             <a href="mailto:rdilip@caltech.edu" target="_blank" title="Email" class="email">
