--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                     <div class="intro-text">
                         <h1>Rohit Dilip</h1>
                         <div class="subtitle">
-                            I work on generative modeling for biology at Caltech. Recently, I've worked on using <a href="assets/kanzi_all_authors.pdf" target="_blank">flow matching to develop scalable tokenizers</a> and <a href="assets/jovian.pdf" target="_blank">generating new biological structures using autoregressive models</a>. Before grad school, I studied quantum information at TUM and got my bachelor's degree in physics from Princeton.</div>
+                            I research generative modeling for biology at Caltech. Recently, I've worked on using <a href="assets/kanzi_all_authors.pdf" target="_blank">flow matching to develop scalable tokenizers</a> and <a href="assets/jovian.pdf" target="_blank">generating new biological structures using autoregressive models</a>. Before grad school, I studied quantum information at TUM and got my bachelor's degree in physics from Princeton.</div>
                         <div class="social-links">
                             <a href="https://github.com/rdilip" target="_blank" title="GitHub" class="github">
                                 <i class="fa-brands fa-github"></i>
