--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                     <div class="paper">
                         <h3><a href="https://www.biorxiv.org/content/10.1101/2023.11.17.567630v5.full.pdf" target="_blank">CellSAM: A Foundation Model for Cell Segmentation</a></h3>
                         <div class="authors">Uriah Israel, Markus Marks, Rohit Dilip, Qilin Li, et al.</div>
-                        <div class="venue">Nature Methods, 2025</div>
+                        <div class="venue">Submitted, 2025</div>
                         <div class="description">
                             CellSAM is a foundation model for cell segmentation.
                         </div>
