--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                          </div>
  
                         <div class="description">
-                            CellSAM is a foundation model for cell segmentation.
+                            CellSAM is a generalist model for cell segmentation that works across visual modalities, sizes, and shapes.
                         </div>
                     </div>
 
