--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@
                             <a href="https://arxiv.org/abs/2510.00351" target="_blank">
                               <img src="https://img.shields.io/badge/arXiv-2510.00351-b31b1b.svg" alt="arXiv">
                             </a>
+                            <a href="https://github.com/rdilip/kanzi" target="_blank">
+                                <img src="https://img.shields.io/badge/GitHub-repo-181717.svg?logo=github" alt="GitHub">
+                              </a>
                          </div>
                         <div class="description">
                             We develop a flow matching based autoencoder for protein structure tokenization. Kanzi
@@ -543,6 +546,9 @@
                             <a href="https://www.biorxiv.org/content/10.1101/2023.11.17.567630v5" target="_blank">
                                 <img src="https://img.shields.io/badge/bioRxiv-2023.11.17.567630-4caf50.svg" alt="bioRxiv">
                               </a>
+                              <a href="https://github.com/vanvalenlab/CellSAM" target="_blank">
+                                <img src="https://img.shields.io/badge/GitHub-repo-181717.svg?logo=github" alt="GitHub">
+                              </a>
                          </div>
  
                         <div class="description">
@@ -562,6 +568,10 @@
                                 <a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.4.043007" target="_blank">
                                   <img src="https://img.shields.io/badge/PhysRevResearch-2023-blue.svg" alt="Physical Review Research">
                                 </a>
+                                <a href="https://github.com/rdilip/qml.git" target="_blank">
+                                  <img src="https://img.shields.io/badge/GitHub-repo-181717.svg?logo=github" alt="GitHub">
+                                </a>
+
                               </div>
                         <div class="description">
                             We develop a tensor-network based data compression technique specifically for exploitation
