--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@
                             <a href="https://arxiv.org/abs/2510.00351" target="_blank">
                               <img src="https://img.shields.io/badge/arXiv-2510.00351-b31b1b.svg" alt="arXiv">
                             </a>
+                            <a href="https://www.biorxiv.org/content/10.1101/2025.10.01.679645v1" target="_blank">
+                              <img src="https://img.shields.io/badge/bioRxiv-2025.10.01.679645-4caf50.svg" alt="bioRxiv">
+                            </a>
                             <a href="https://github.com/rdilip/kanzi" target="_blank">
                                 <img src="https://img.shields.io/badge/GitHub-repo-181717.svg?logo=github" alt="GitHub">
                               </a>
