update with blog

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             letter-spacing: -0.01em;
         }
 
+        .post-title:hover {
+            color: #2563eb;
+        }
+
         .post-title button:hover span.triangle {
             transform: rotate(90deg);
         }
@@ -81,7 +85,7 @@
         }
 
         .post-toggle[aria-expanded="true"] span.triangle {
-            color: #2563eb;
+            /* color: #2563eb; */
             transform: rotate(90deg);
         }
 
