switch to multipage

--- a/index.html
+++ b/index.html
@@ -529,8 +529,10 @@
             <nav>
                 <div class="logo">Rohit Dilip</div>
                 <ul class="nav-links">
-                    <li><a href="#" onclick="showPage(event, 'home')" class="active">Research</a></li>
-                    <li><a href="#" onclick="showPage(event, 'blog')">Notes</a></li>
+                    <!-- <li><a href="#" onclick="showPage(event, 'home')" class="active">Research</a></li>
+                    <li><a href="#" onclick="showPage(event, 'blog')">Notes</a></li> -->
+                        <li><a href="index.html" class="active">Research</a></li>
+                        <li><a href="notes.html">Notes</a></li>
                 </ul>
             </nav>
         </div>
